fix: enable dots overlay on mobile again

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -711,10 +711,10 @@ body
         background: var(--theme-blok-solid)
   &[data-space="3D"]
     // 124px panel height + blok height + desired margin
-    padding-top: calc(124px + var(--blok-height) + 15vh)
+    padding-top: calc(124px + var(--blok-height) + 20vh)
     padding-bottom: 6rem
     @media (orientation: portrait)
-      padding-top: calc(124px + var(--blok-height) + 10vh)
+      padding-top: calc(124px + var(--blok-height) + 15vh)
     // .laserBlok
     //   opacity: 1
     main
